corrections ml_grid agein

--- a/10_Transition&Cleaning/ml_grid.ipynb
+++ b/10_Transition&Cleaning/ml_grid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -15,18 +15,21 @@
      "output_type": "stream",
      "text": [
       "5000 reviews per class from ../Data/amazon_phone.pkl loaded\n",
-      "3.0    55\n",
-      "1.0    52\n",
-      "4.0    51\n",
-      "2.0    49\n",
-      "5.0    43\n",
-      "Name: label, dtype: int64\n",
-      "                                               text_prep  label\n",
-      "14051  case good job but not look good seen pictur wh...    3.0\n",
-      "7470   work well but design heavi fall wall outlet ma...    2.0\n",
-      "2307   let us say leav phone hous go patio garag want...    1.0\n",
-      "20742  great extern batteri anyon want carri charg mi...    5.0\n",
-      "21189  sabrent port famili size usb wall charger exac...    5.0\n"
+      "Fitting 5 folds for each of 48 candidates, totalling 240 fits\n",
+      "LogisticRegression\n",
+      "{'clf__C': 0.1, 'clf__multi_class': 'ovr', 'clf__penalty': 'l2', 'clf__solver': 'newton-cg', 'vect__ngram_range': (1, 1)}\n",
+      "0.18888888888888886\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\d064966\\appdata\\local\\continuum\\anaconda3\\envs\\masterthesis\\lib\\site-packages\\sklearn\\model_selection\\_split.py:672: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=5.\n",
+      "  % (min_groups, self.n_splits)), UserWarning)\n",
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  58 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=-1)]: Done 240 out of 240 | elapsed:    1.3s finished\n"
      ]
     }
    ],
@@ -96,6 +99,7 @@
     "\n",
     "\n",
     "df = load_sampled(amazon_link, 5000)\n",
+    "df = df.sample(frac=0.001)\n",
     "target = df.label\n",
     "text = df.text_prep\n",
     "\n",
@@ -106,6 +110,7 @@
     "param_grid = [{'vect__ngram_range': [(1, 1)],\n",
     "               'clf__penalty': ['l1', 'l2'],\n",
     "               'clf__C': [0.1, 1.0, 10.0],\n",
+    "               'clf__solver': ['newton-cg', 'sag', 'saga', 'lbfgs'],\n",
     "               'clf__multi_class': ['ovr', 'multinomial']\n",
     "               }]\n",
     "lr_tfidf = Pipeline([('vect', tfidf),\n",
@@ -117,60 +122,60 @@
     "print(gs_lr_tfidf.best_score_)\n",
     "\n",
     "\n",
-    "param_grid = [{'vect__ngram_range': [(1, 1)],\n",
-    "               'clf__alpha': [0.1, 1.0, 10.0],\n",
-    "               'clf__fit_prior': [True, False]\n",
-    "               }]\n",
-    "nb_tfidf = Pipeline([('vect', tfidf),\n",
-    "                     ('clf', MultinomialNB())])\n",
-    "gs_nb_tfidf = GridSearchCV(nb_tfidf, param_grid, scoring='f1_macro', cv=5, verbose=1, n_jobs=-1)\n",
-    "gs_nb_tfidf.fit(X_train, y_train)\n",
-    "print('MultinomialNB')\n",
-    "print(gs_nb_tfidf.best_params_)\n",
-    "print(gs_nb_tfidf.best_score_)\n",
+    "# param_grid = [{'vect__ngram_range': [(1, 1)],\n",
+    "#                'clf__alpha': [0.1, 1.0, 10.0],\n",
+    "#                'clf__fit_prior': [True, False]\n",
+    "#                }]\n",
+    "# nb_tfidf = Pipeline([('vect', tfidf),\n",
+    "#                      ('clf', MultinomialNB())])\n",
+    "# gs_nb_tfidf = GridSearchCV(nb_tfidf, param_grid, scoring='f1_macro', cv=5, verbose=1, n_jobs=-1)\n",
+    "# gs_nb_tfidf.fit(X_train, y_train)\n",
+    "# print('MultinomialNB')\n",
+    "# print(gs_nb_tfidf.best_params_)\n",
+    "# print(gs_nb_tfidf.best_score_)\n",
     "\n",
     "\n",
-    "param_grid = [{'vect__ngram_range': [(1, 1)],\n",
-    "               'clf__kernel': ['linear', 'poly', 'rbf', 'sigmoid'],\n",
-    "               'clf__C': [0.1, 1.0, 10.0],\n",
-    "               'clf__gamma': ['auto', 'scale']\n",
-    "               }]\n",
-    "svr_tfidf = Pipeline([('vect', tfidf),\n",
-    "                     ('clf', SVR())])\n",
-    "gs_svr_tfidf = GridSearchCV(svr_tfidf, param_grid, scoring='neg_mean_squared_error', cv=5, verbose=1, n_jobs=-1)\n",
-    "gs_svr_tfidf.fit(X_train, y_train)\n",
-    "print('SVR')\n",
-    "print(gs_svr_tfidf.best_params_)\n",
-    "print(gs_svr_tfidf.best_score_)\n",
+    "# param_grid = [{'vect__ngram_range': [(1, 1)],\n",
+    "#                'clf__kernel': ['linear', 'poly', 'rbf', 'sigmoid'],\n",
+    "#                'clf__C': [0.1, 1.0, 10.0],\n",
+    "#                'clf__gamma': ['auto', 'scale']\n",
+    "#                }]\n",
+    "# svr_tfidf = Pipeline([('vect', tfidf),\n",
+    "#                      ('clf', SVR())])\n",
+    "# gs_svr_tfidf = GridSearchCV(svr_tfidf, param_grid, scoring='neg_mean_squared_error', cv=5, verbose=1, n_jobs=-1)\n",
+    "# gs_svr_tfidf.fit(X_train, y_train)\n",
+    "# print('SVR')\n",
+    "# print(gs_svr_tfidf.best_params_)\n",
+    "# print(gs_svr_tfidf.best_score_)\n",
     "\n",
     "\n",
-    "param_grid = [{'vect__ngram_range': [(1, 1)],\n",
-    "               'clf__kernel': ['linear', 'poly', 'rbf', 'sigmoid'],\n",
-    "               'clf__C': [0.1, 1.0, 10.0],\n",
-    "               'clf__gamma': ['auto', 'scale'],\n",
-    "               'clf__decision_function_shape': ['ovo', 'ovr']\n",
-    "               }]\n",
-    "svc_tfidf = Pipeline([('vect', tfidf),\n",
-    "                     ('clf', SVC())])\n",
-    "gs_svc_tfidf = GridSearchCV(svc_tfidf, param_grid, scoring='f1_macro', cv=5, verbose=3, n_jobs=-1)\n",
-    "gs_svc_tfidf.fit(X_train, y_train)\n",
-    "print('SVC')\n",
-    "print(gs_svc_tfidf.best_params_)\n",
-    "print(gs_svc_tfidf.best_score_)\n",
+    "# param_grid = [{'vect__ngram_range': [(1, 1)],\n",
+    "#                'clf__kernel': ['linear', 'poly', 'rbf', 'sigmoid'],\n",
+    "#                'clf__C': [0.1, 1.0, 10.0],\n",
+    "#                'clf__gamma': ['auto', 'scale'],\n",
+    "#                'clf__decision_function_shape': ['ovo', 'ovr']\n",
+    "#                }]\n",
+    "# svc_tfidf = Pipeline([('vect', tfidf),\n",
+    "#                      ('clf', SVC())])\n",
+    "# gs_svc_tfidf = GridSearchCV(svc_tfidf, param_grid, scoring='f1_macro', cv=5, verbose=3, n_jobs=-1)\n",
+    "# gs_svc_tfidf.fit(X_train, y_train)\n",
+    "# print('SVC')\n",
+    "# print(gs_svc_tfidf.best_params_)\n",
+    "# print(gs_svc_tfidf.best_score_)\n",
     "\n",
     "\n",
-    "param_grid = [{'vect__ngram_range': [(1, 1)],\n",
-    "               'clf__penalty': ['l1', 'l2'],\n",
-    "               'clf__alpha': [0.1, 0.01, 0.001, 0.0001],\n",
-    "               'clf__max_iter': [500, 1000, 10000]\n",
-    "               }]\n",
-    "sdg_tfidf = Pipeline([('vect', tfidf),\n",
-    "                     ('clf', SGDClassifier(loss='hinge', random_state=123))])\n",
-    "gs_sdg_tfidf = GridSearchCV(sdg_tfidf, param_grid, scoring='f1_macro', cv=5, verbose=1, n_jobs=-1)\n",
-    "gs_sdg_tfidf.fit(X_train, y_train)\n",
-    "print('SGDClassifier')\n",
-    "print(gs_sdg_tfidf.best_params_)\n",
-    "print(gs_sdg_tfidf.best_score_)\n"
+    "# param_grid = [{'vect__ngram_range': [(1, 1)],\n",
+    "#                'clf__penalty': ['l1', 'l2'],\n",
+    "#                'clf__alpha': [0.1, 0.01, 0.001, 0.0001],\n",
+    "#                'clf__max_iter': [500, 1000, 10000]\n",
+    "#                }]\n",
+    "# sdg_tfidf = Pipeline([('vect', tfidf),\n",
+    "#                      ('clf', SGDClassifier(loss='hinge', random_state=123))])\n",
+    "# gs_sdg_tfidf = GridSearchCV(sdg_tfidf, param_grid, scoring='f1_macro', cv=5, verbose=1, n_jobs=-1)\n",
+    "# gs_sdg_tfidf.fit(X_train, y_train)\n",
+    "# print('SGDClassifier')\n",
+    "# print(gs_sdg_tfidf.best_params_)\n",
+    "# print(gs_sdg_tfidf.best_score_)\n"
    ]
   }
  ],
