amazon movie to pkl

--- a/10_Transition&Cleaning/amazon_movie_topkl.ipynb
+++ b/10_Transition&Cleaning/amazon_movie_topkl.ipynb
@@ -162,7 +162,53 @@
       "49    BBC      12309\n",
       "lowercasing done\n",
       "stopword removal done\n",
-      "Token Count:  150036351\n"
+      "Token Count:  150036351\n",
+      "pos tagging done\n",
+      "######## Text Canonicalization\n",
+      "port stemming done\n",
+      "PREPROCESSING SUMMARY\n",
+      "The number of numerics: 2484764\n",
+      "Numerics as percentage: 0.79% \n",
+      "The number of punctuation and non-ascii: 48023684\n",
+      "Punctuation and non-ascii as percentage: 15.19% \n",
+      "The number of stop words: 112924856\n",
+      "Stop words as percentage: 35.71% \n",
+      "######## DATA COMPLETION AFTER PREPROCESSING\n",
+      "Empty preprocessed text: 11\n",
+      "Duplicate preprocessed text: 0.00%\n",
+      "After removing empty preprocessed texts:  1693051\n",
+      "######## DEDUPLICATION AFTER PREPROCESSING\n",
+      "Duplicate preprocessed text: 2361\n",
+      "Duplicate preprocessed text: 0.14%\n",
+      "After removing duplicate preprocessed texts:  1690690\n",
+      "######### LAST CHECK\n",
+      "                                                text  label LANGUAGE  \\\n",
+      "0  This is a charming version of the classic Dick...    4.0       en   \n",
+      "1  It was good but not as emotionally moving as t...    3.0       en   \n",
+      "2  Don't get me wrong, Winkler is a wonderful cha...    3.0       en   \n",
+      "3  Henry Winkler is very good in this twist on th...    5.0       en   \n",
+      "4  This is one of the best Scrooge movies out.  H...    4.0       en   \n",
+      "\n",
+      "                                           text_prep  token_count  \\\n",
+      "0  charm version classic dicken tale henri winkle...           27   \n",
+      "1  good but not emot move christma carol dicken l...           13   \n",
+      "2  not get wrong winkler wonder charact actor wou...           26   \n",
+      "3  henri winkler veri good twist classic stori no...           18   \n",
+      "4  one best scroog movi henri winkler outdo cast ...           15   \n",
+      "\n",
+      "   numerics_mix  punct_non_ascii         upper  stopwords  \\\n",
+      "0             0                8           [A]         24   \n",
+      "1             0                0            []          8   \n",
+      "2             3               17  [B, A, C, C]         17   \n",
+      "3             0                4            []         12   \n",
+      "4             0                3            []          9   \n",
+      "\n",
+      "                                                 pos  \n",
+      "0  [(charming, VBG), (version, NN), (classic, JJ)...  \n",
+      "1  [(good, JJ), (but, CC), (not, RB), (emotionall...  \n",
+      "2  [(not, RB), (get, VB), (wrong, JJ), (winkler, ...  \n",
+      "3  [(henry, NN), (winkler, NN), (very, RB), (good...  \n",
+      "4  [(one, CD), (best, JJS), (scrooge, NN), (movie...  \n"
      ]
     },
     {
