--- a/10_Transition&Cleaning/amazon_movie_topkl.ipynb
+++ b/10_Transition&Cleaning/amazon_movie_topkl.ipynb
@@ -241,6 +241,8 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
     "from Scripts import loading as dl, profiling as pf, cleaning as cl, preprocessing as prep\n",
     "\n",
     "\n",
